<resources>
    <string name="app_name">Sliko</string>
    <string name="selectTime">Chọn giờ</string>
    <string name="pickTime">Chọn giờ</string>
    <string name="enterAmount">Nhập số tiền</string>
    <string name="stadiumName">Tên sân vận động</string>
    <string name="stadiumNameBigText">Tên sân vận động</string>
    <string name="stadiumLocation">Vị trí sân</string>
    <string name="bookStadium">Đặt sân</string>
    <string name="payNow">Thanh toán</string>
    <string name="close">Đóng</string>
    <string name="reviews">Nhận xét</string>
    <string name="stadiumInfo">Thông tin sân bóng</string>
    <string name="pitches">Sân</string>
    <string name="thankYouMessage">Cảm ơn bạn đã chọn Sliko, Tiếp tục đặt sân nào</string>
    <string name="price">Giá: ₫&#160;</string>
    <string name="paid">Đã thanh toán: ₫&#160;</string>
    <string name="currencySymbol">₫&#160;</string>
    <string name="myBookings">Danh sách đặt sân</string>
    <string name="notifications">Thông báo</string>
    <string name="editProfile">Chỉnh sửa Profile</string>
    <string name="profile">Profile</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="registerToSilko">Đăng ký tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="haveAccountLoginHere">Đã có tài khoản? Đăng nhập tại đây</string>
    <string name="createStadium">Tạo sân vận động</string>
    <string name="Pitch_Name">Tên sân</string>
    <string name="enterpitchname">Nhập tên sân</string>
    <string name="Description">Mô tả</string>
    <string name="enterDescription">Vd: Sân mấy người, điều kiện sân</string>
    <string name="Price">Giá sân: ₫&#160;</string>
    <string name="enterprice">Nhập giá sân</string>
    <string name="availability">Giờ hoạt động</string>
    <string name="startime">Giờ mở cửa</string>
    <string name="endtime">Giờ đóng cửa</string>
    <string name="stadium_image">Hình ảnh</string>
    <string name="selectimagetoupload">Chọn ảnh để tải lên</string>
    <string name="formatsholdbe">Định dạng phải là .jpeg hoặc .png</string>
    <string name="addpitch">Thêm sân</string>
    <string name="mobilenumber">Số điện thoại</string>
    <string name="enter_mobilenumber">Nhập số điện thoại</string>
    <string name="entertime">Nhập thời gian</string>
    <string name="startdate">Ngày mở cửa</string>
    <string name="enddate">Ngày đóng cửa</string>
    <string name="select_date">Chọn ngày</string>
    <string name="Save">Lưu</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="enteremail">Nhập email</string>
    <string name="loginToSilko">Đăng nhập vào Silko</string>
    <string name="login">Đăng nhập</string>
    <string name="noAccountCreateHere">Không có tài khoản? Tạo ở đây</string>
    <string name="Password">Mật khẩu</string>
    <string name="Add_Pitch">Thêm sân</string>
    <string name="Address">Địa chỉ</string>
    <string name="Enter_Address">Nhập địa chỉ</string>
    <string name="enterusername">Điền tên đăng nhập</string>
    <string name="confirmpasswd">Xác nhận mật khẩu</string>
    <string name="addedStadium">Stadium</string>
    <string name="menu_pitches">Danh sách sân</string>
    <string name="menu_bookings">Danh sách đặt sân</string>
    <string name="addPitch">Thêm sân</string>
    <string name="plzEnterpitchname">Vui lòng nhập tên sân</string>
    <string name="plzEnterdescption">Vui lòng nhập mô tả</string>
    <string name="plzenteraddress">Vui lòng nhập địa chỉ</string>
    <string name="please_insert_one_image_atleast">Bạn chưa tải ảnh lên</string>
    <string name="please_enter_username">Vui lòng nhập tên tài khoản</string>
    <string name="please_enter_phone">Vui lòng nhập số điện thoại</string>
    <string name="please_enter_valid_phone">Số điện thoại không hợp lệ</string>
    <string name="please_enter_email">Vui lòng nhập email</string>
    <string name="please_enter_valid_email">Email không đúng hoặc đã có người sử dụng</string>
    <string name="please_enter_password">Vui lòng nhập mật khẩu</string>
    <string name="please_confirm_password">Vui lòng nhập lại mật khẩu</string>
    <string name="password_do_not_match">Mật khẩu không giống nhau</string>
    <string name="noStadiumFound">Bạn chưa có sân vận động nào cả, hãy tạo sân nào</string>
    <string name="submit">Submit</string>
    <string name="changePassword">Đổi mật khẩu</string>
    <string name="newPassword">Nhập mật khẩu mới</string>
    <string name="cancel">Hủy</string>
    <string name="appRequiresPermission">App needs permission enable them in settings</string>
    <string name="bookingDetail">Booking Detail</string>
    <string name="pitchName">Sân:&#160;</string>
    <string name="bookingOrder">Tổng số đơn đặt hàng</string>
    <string name="menu_rating">Tất cả nhận xét</string>
    <string name="singOut">Đăng xuất</string>
    <string name="editStadium">Chỉnh sửa sân vận động</string>
    <string name="stadiumDescription">Mô tả sân vận động</string>
    <string name="addedon">Đã tạo vào</string>
    <string name="pitchImages">Hình ảnh sân</string>
    <string name="delete">Delete</string>
    <string name="deleteStadium">Xóa sân vận động</string>
    <string name="sureDeleteThisStadium">Bạn có chắc muốn xóa sân vận động này không ? Sân của bạn sẽ bị xóa vĩnh viễn</string>
    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="editPitch">Chỉnh sửa sân</string>
    <string name="adddress">Địa chỉ:&#160;</string>
    <string name="stadiumAddedOn">Sân vận động đã tạo vào: </string>
    <string name="noReviews">Không có nhận xét</string>
    <string name="reports">Báo cáo</string>
    <string name="userName">Tên tài khoản</string>
    <string name="userNamenew">Tên người chơi</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="favouriteTeam">Bạn là fan của đội nào</string>
    <string name="favouritePosition">Vị trí sở trường</string>
    <string name="please_enter_team">Vui lòng nhập đội bóng yêu thích của bạn</string>
    <string name="please_select_play_position">Vui lòng nhập vị trí sở trường</string>
    <string name="please_enter_height">Vui lòng nhập chiều cao</string>
    <string name="please_enter_weight">Vui lòng nhập cân nặng</string>
    <string name="please_enter_footedness">Vui lòng nhập chân thuận</string>
    <string name="signout">Đăng xuất</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Câng nặng</string>
    <string name="footedness">Chân thuận</string>
    <string name="doYouWantToSignOut">Bạn có thực sự muốn đăng xuất</string>
    <string name="updateProfile">Cập nhật Profile</string>
    <string name="please_select_atleast_one_time_slot">Vui lòng chọn thời gian mở cửa</string>
    <string name="please_retry">Vui lòng nhập lại</string>
    <string name="addStadium">+ Thêm sân vận động</string>
    <string name="bookingManagement">Quản lý đặt sân</string>
    <string name="home">Trang chủ</string>
    <string name="yes">Yes</string>
    <string name="totalBooking">Tổng số lượt đặt:</string>
    <string name="deletePitch">Xóa sân</string>
    <string name="sureDeleteThisPitch">Bạn có chắc muốn xóa sân này không?</string>
    <string name="noBookingRecords">Chưa có lịch sử đặt sân</string>
    <string name="noRatingFound">Chưa có đánh giá</string>
    <string name="google_map_key">AIzaSyC3owxdsIZH7Dda3zG6inW1w9tOmpQsigw</string>
    <string name="stadiumAvailability">Giờ hoạt động</string>
    <string name="Stadiums">Sân vận động</string>
    <string name="PitchInfo">Thông tin sân</string>
    <string name="description">Mô tả:&#160;</string>
    <string name="bookPitch">Đặt sân</string>
    <string name="noBookingAvailable">Bạn đã đến trễ, sân đã đầy rồi!</string>
    <string name="noBookingAvailableUSer">Chưa có lịch sử đặt sân</string>
    <string name="couldNotLoadProfile">Không thể tải profile</string>
    <string name="saveProfile">Lưu thay đổi</string>
    <string name="enablePermission">Enable Permissions</string>
    <string name="pickSlotForBooking">Chọn sân và giờ đá</string>
    <string name="pitchAndSlots">Sân &amp; giờ</string>
    <string name="bookingCreatedSuccessfully">Manual Booking Successful</string>
    <string name="pleaseSelectStartDate">Vui lòng nhập ngày bắt đầu</string>
    <string name="pleaseSelectEndDate">Vui lòng nhập ngày kết thúc</string>
    <string name="bookNow">Đặt sân ngay</string>
    <string name="pleaseSelectSomeOtherPitch">Vui lòng chọn sân khác</string>
    <string name="pleaseSelectDifferentDate">Vui lòng chọn ngày khác</string>
    <string name="bookingDate">Ngày đặt:&#160;</string>
    <string name="bookingTime">Giờ đặt:&#160;</string>
    <string name="setting">Cài đặt</string>
    <string name="totalEarnings">Tổng doanh thu</string>
    <string name="stadiumReport">Báo cáo theo</string>
    <string name="please_enter_suitale_time">Vui lòng nhập thời gian phù hợp</string>
    <string name="pitch">Sân</string>
    <string name="paymentMode">Phương thức thanh toán</string>
    <string name="pitchType">Loại sân</string>
    <string name="numberOfPlayers">Số lượng cầu thủ mỗi đội</string>
    <string name="bookingInfo">Thông tin đặt sân</string>
    <string name="date">Ngày:&#160;</string>
    <string name="time">Giờ:&#160;</string>
    <string name="goBack">Trở lại</string>
    <string name="backToReports">Trở lại trang báo cáo</string>
    <string name="cash">Tiền mặt</string>
    <string name="ZaloPay">ZaloPay</string>
    <string name="momoPay">Momo</string>
    <string name="amountToBePaid">Số tiền phải thanh toán</string>
    <string name="please_enter_stadium_address">Vui lòng nhập địa chỉ sân vận động</string>
    <string name="please_enter_stadium_description">Vui lòng nhập mô tả sân vận động</string>
    <string name="please_enter_pitch_name">Vui lòng nhập tên sân</string>
    <string name="updateStadium">Cập nhật sân vận động</string>
    <string name="password_should_big">Mật khẩu phải từ 6 ký tự trở lên</string>
    <string name="please_enter_new_password">Vui lòng nhập mật khẩu mới</string>
    <string name="backToPitchBookings">Trở lại trang đặt sân</string>
    <string name="searchStadiumOrLocation">Tìm theo tên sân hoặc địa điểm</string>
    <string name="bookings">Đặt sân</string>
    <string name="bookingHistory">Lịch sử đặt sân</string>
    <string name="rewards">Phần thưởng</string>
    <string name="find">Tìm kèo &amp; đội </string>
    <string name="findLocation">Tìm địa điểm</string>
    <string name="lowestPitchPrice">Giá thấp nhất ₫:&#160;</string>
    <string name="location">Địa điểm:&#160;</string>
    <string name="allTransition">AllTransitions</string>
    <string name="totalSpent">Tổng tiền đặt sân</string>
    <string name="loginWithFb">Đăng nhập với facebook</string>
    <string name="fb_AppID">471813193397905</string>
    <string name="fb_HashKey">ga0RGNYHvNM5d0SLGQfpQWAPGJ8=</string>
    <string name="fb_login_protocol_scheme">fb471813193397905</string>
    <string name="upcomingBooking">Sắp diễn ra</string>
    <string name="sorry_could_not_retrive_your_email">Email not found on Facebook \\nSigning Out</string>
    <string name="please_enter_below_fields">Vui lòng nhập thông tin bên dưới để hoàn tất thay đổi mật khẩu</string>
    <string name="addBooking">Thêm đặt phòng</string>
    <string name="please_complete_process">Vui lòng hoàn tất đăng ký</string>
    <string name="loggingOutFromFb">Logging our from Facebook</string>
    <string name="addPhoto">Thêm ảnh</string>
    <string name="vacant">Trống</string>
    <string name="minutesRemaining">Gần hết giờ</string>
    <string name="enterEmail">Nhập email</string>
    <string name="provideYourFeedback">Cung cấp phản hồi của bạn</string>
    <string name="writeSomething">viết một cái gì đó ở đây</string>
</resources>