<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg_green"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        android:text="@string/bookPitch"
        android:textColor="@color/white" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/amountTobePaid"
            android:text="200"
            android:layout_gravity="end"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/edit_bg_green"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="Stadium Info"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:id="@+id/stadiumName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadiumName"
                    android:textFontWeight="1" />

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/stadiumAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Address"
                    android:textFontWeight="1" />



                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:text="Pitch Info"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:id="@+id/pitchName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pitchName"/>

                <TextView
                    android:id="@+id/pitchCost"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cost" />
                <TextView
                    android:id="@+id/pitchTimeSlot"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pitch Time slot" />
                <TextView
                    android:id="@+id/pitchbookingDate"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Booking Date" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="Amount to be paid"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="top|center"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:text="@string/cash"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:text="@string/ZaloPay"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"/>



                    <RadioButton
                        android:layout_width="wrap_content"
                        android:text="@string/momoPay"
                        android:layout_height="wrap_content"/>


                </RadioGroup>
                <LinearLayout
                    android:gravity="top|center"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="48dp"
                        android:background="@drawable/ic_money"
                        android:layout_height="48dp"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:background="@drawable/zalo_pay_icon"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"/>

                    <ImageView
                        android:layout_width="48dp"
                        android:background="@drawable/momo_pay_icon"
                        android:layout_height="48dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_bg_grey"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:drawableRight="@drawable/ic_circular_clock"
                                android:ellipsize="end"
                                android:gravity="center_vertical"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:singleLine="true"
                                android:text="@string/selectTime"
                                android:textSize="14sp" />
                        </FrameLayout>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_bg_grey"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:drawableRight="@drawable/ic_calendar"
                                android:ellipsize="end"
                                android:gravity="center_vertical"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:singleLine="true"
                                android:text="@string/pickTime"
                                android:textSize="14sp" />
                        </FrameLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_bg_grey"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/enterAmount"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/closeButton"
                    android:layout_width="100dp"
                    android:layout_height="36dp"
                    android:background="@drawable/edit_bg_grey"
                    android:text="@string/close"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/payNowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/edit_bg_green"
                    android:text="@string/payNow"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</LinearLayout>