<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/forgot_password_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/black_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Enter the email address associated with \n your account to receive password reset instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="19dp"
                android:background="@drawable/email" />

            <TextView
                android:layout_width="8dp"
                android:layout_height="match_parent" />


            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/enterEmail"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_bg_green"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>